--- a/scripts/docker/dockerfile.in
+++ b/scripts/docker/dockerfile.in
@@ -2,6 +2,7 @@ FROM axom/compilers:<NAME>-<MAJ_VER>
 LABEL maintainer="bramwell1@llnl.gov"
 ARG branch=develop
 
+SHELL ["/bin/bash", "-c"]
 RUN sudo apt-get update -y
 RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpich cmake python3 -fy
 RUN sudo apt-get -qq install -y --no-install-recommends gfortran-7 && sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 100
@@ -19,9 +20,7 @@ RUN python3 ./serac/scripts/uberenv/uberenv.py --spack-config-dir=./serac/script
                                                --spec=%<NAME>@<VER>.0 --prefix=/home/serac/serac_tpls -k
 
 # Make sure the new hostconfig worked
-RUN pushd serac && python3 config-build.py -hc *.cmake
-RUN pushd build* && make -j && make -j test
-RUN popd && popd
+RUN cd serac && python3 config-build.py -hc *.cmake -bp build && cd build && make -j && make -j test
 
 RUN mkdir -p /home/serac/export_hostconfig
 RUN cp ./serac/*.cmake /home/serac/export_hostconfig
