--- a/src/serac/physics/utilities/functional/tests/CMakeLists.txt
+++ b/src/serac/physics/utilities/functional/tests/CMakeLists.txt
@@ -4,11 +4,20 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause)
 
-# Then add the examples/tests
+# this test is all constexpr-evaluated, so it doesn't
+# actually need to run, if it compiles without error, the tests have passed
+blt_add_executable(NAME        tensor_unit_tests
+                   SOURCES     tensor_unit_tests.cpp
+                   OUTPUT_DIR  ${TEST_OUTPUT_DIRECTORY}
+                   DEPENDS_ON  gtest serac_functional ${functional_depends}
+                   FOLDER      serac/tests)
+
 set(functional_tests_serial
-    hcurl_unit_tests.cpp
-    test_tensor_ad.cpp
-    tuple_arithmetic_unit_tests.cpp)
+    refactor_element_matrix_assembly.cpp
+    #hcurl_unit_tests.cpp
+    #test_tensor_ad.cpp
+    #tuple_arithmetic_unit_tests.cpp
+)
     
 foreach(filename ${functional_tests_serial})
     get_filename_component(test_name ${filename} NAME_WE)
@@ -26,10 +35,10 @@ endforeach()
 # Then add the examples/tests
 set(functional_tests_mpi
     # functional_boundary_test.cpp
-    functional_qoi.cpp
-    functional_comparisons.cpp
-    functional_comparison_L2.cpp
-    )
+    # functional_qoi.cpp
+    # functional_comparisons.cpp
+    # functional_comparison_L2.cpp
+)
     
 foreach(filename ${functional_tests_mpi})
     get_filename_component(test_name ${filename} NAME_WE)
@@ -47,8 +56,9 @@ endforeach()
 
 # not sure how we want to handle performance-related tests
 set(functional_performance_tests
-    performance/J2_material_with_AD.cpp
-    performance/diffusion_performance_test.cpp)
+    #performance/J2_material_with_AD.cpp
+    #performance/diffusion_performance_test.cpp
+)
  
 foreach(filename ${functional_performance_tests})
     get_filename_component(test_name ${filename} NAME_WE)
@@ -62,7 +72,8 @@ endforeach()
 if(ENABLE_CUDA)
 
     set(functional_tests_cuda
-        tensor_unit_tests_cuda.cu)
+        #tensor_unit_tests_cuda.cu
+    )
         
     foreach(filename ${functional_tests_cuda})
         get_filename_component(test_name ${filename} NAME_WE)
