--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -170,6 +170,16 @@ install(TARGETS              serac
         DESTINATION          lib
         )
 
+if (NOT AXOM_DIR)
+    # Add Axom's targets to our export set
+    # TODO: we should ask Axom for this list in the future
+    set(axom_exported_targets axom cli11 fmt lua sol sparsehash)
+    install(TARGETS              ${axom_exported_targets}
+            EXPORT               serac-targets
+            DESTINATION          lib
+            )
+endif()
+
 install(EXPORT serac-targets 
         NAMESPACE serac::
         DESTINATION lib/cmake
